[gd_scene load_steps=4 format=3 uid="uid://b0lgp1ecd4rfu"]

[ext_resource type="Script" path="res://src/controls.gd" id="1_mx17x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb7wt"]
bg_color = Color(0, 0.545098, 0.239216, 1)

[sub_resource type="Theme" id="Theme_q16t2"]
Button/styles/normal = SubResource("StyleBoxFlat_eb7wt")

[node name="Controls" type="Control"]
custom_minimum_size = Vector2(475, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mx17x")

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Controls"]
custom_minimum_size = Vector2(475, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 3

[node name="Setup" type="MarginContainer" parent="Controls/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/TabContainer/Setup"]
custom_minimum_size = Vector2(400, 950)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Info_SizeSelector" type="Label" parent="Controls/TabContainer/Setup/VBoxContainer"]
visible = false
layout_mode = 2
text = "(i) Set the bounds of the space which the generator will create. The generator does not yet support infinite terrain. Note that you cannot change this size later without resetting the map."
autowrap_mode = 2

[node name="Info_CustomConstraints" type="Label" parent="Controls/TabContainer/Setup/VBoxContainer"]
visible = false
layout_mode = 2
text = "(i) Some custom constraints have been created that only allow \"capped\" prototypes on the top and sides of the bounding space. Note that this only works for the built-in prototype set and may need changes when prototypes are added or changed."
autowrap_mode = 2

[node name="InitializeValues" type="HBoxContainer" parent="Controls/TabContainer/Setup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="X" type="Label" parent="Controls/TabContainer/Setup/VBoxContainer/InitializeValues"]
layout_mode = 2
text = "X"

[node name="XValue" type="TextEdit" parent="Controls/TabContainer/Setup/VBoxContainer/InitializeValues"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "20"
scroll_fit_content_height = true

[node name="Y" type="Label" parent="Controls/TabContainer/Setup/VBoxContainer/InitializeValues"]
layout_mode = 2
text = "Y"

[node name="YValue" type="TextEdit" parent="Controls/TabContainer/Setup/VBoxContainer/InitializeValues"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "5"
scroll_fit_content_height = true

[node name="Z" type="Label" parent="Controls/TabContainer/Setup/VBoxContainer/InitializeValues"]
layout_mode = 2
text = "Z"

[node name="ZValue" type="TextEdit" parent="Controls/TabContainer/Setup/VBoxContainer/InitializeValues"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "30"
scroll_fit_content_height = true

[node name="Initialize" type="Button" parent="Controls/TabContainer/Setup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Initialize"

[node name="Start" type="Button" parent="Controls/TabContainer/Setup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_q16t2")
disabled = true
text = "Start"

[node name="Finalize" type="Button" parent="Controls/TabContainer/Setup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_q16t2")
disabled = true
text = "Finalize
"

[node name="Reset" type="Button" parent="Controls/TabContainer/Setup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Reset (NYI)"

[connection signal="pressed" from="Controls/TabContainer/Setup/VBoxContainer/Initialize" to="." method="_on_initialize_pressed"]
[connection signal="pressed" from="Controls/TabContainer/Setup/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Controls/TabContainer/Setup/VBoxContainer/Finalize" to="." method="_on_finalize_pressed"]
[connection signal="pressed" from="Controls/TabContainer/Setup/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
